# web-scrapping

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_scrape.py
examples/: mcp_client_example.py
website_scraper_mcp/: __init__.py  __main__.py  app.py  config.py  models.py  server.py
website_scraper_mcp/tools/: __init__.py  chunk.py  clean.py  crawl.py  scrape.py
