[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "website-scraper-mcp"
version = "1.0.0"
description = "Production-ready MCP server for website scraping and Azure AI Search indexing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]

dependencies = [
    "mcp[cli]>=1.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "playwright>=1.44.0",
    "trafilatura>=1.10.0",
    "azure-search-documents>=11.6.0",
    "azure-core>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
website-scraper-mcp = "website_scraper_mcp.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["website_scraper_mcp*"]
